# VisualMassifDiff

./: .gitignore  .travis.yml  Allocation.cpp  Allocation.h  AllocationPath.cpp  AllocationPath.h  AllocationStats.h  AllocationsGraph.cpp  AllocationsGraph.h  BinaryIOStream.cpp  BinaryIOStream.h  CIBuild.sh  CMakeLists.txt  CodeLocation.cpp  CodeLocation.h  CodeLocationFactory.cpp  CodeLocationFactory.h  CodeLocationStats.cpp  CodeLocationStats.h  CodeLocationStatsModel.cpp  CodeLocationStatsModel.h  DlgLiveCapture.cpp  DlgLiveCapture.h  DlgLiveCapture.ui  DlgLiveCaptureSettings.cpp  DlgLiveCaptureSettings.h  DlgLiveCaptureSettings.ui  DlgSnapshotDetails.cpp  DlgSnapshotDetails.h  DlgSnapshotDetails.ui  DlgSnapshotDiffs.cpp  DlgSnapshotDiffs.h  FormatNumber.cpp  FormatNumber.h  Globals.h  HistoryGraph.cpp  HistoryGraph.h  HistoryModel.cpp  HistoryModel.h  HistoryModelHierarchyDelegate.cpp  (+75 more)
res/: VisualMassifDiff.qrc
